--- v0.2.0 [2014-04-05] ---

* [NEW] It's now possible to pass a pattern (e.g /var/log/**/*.log) when adding log files through the arg option --log.

* [FIX] Fixed issue where file size formatted values would be displayed as zero.

* [FIX] Fixed multiple issues related to non-ascii chars.

* [FIX] Fixed issue where HTML was not escaped in the log contents.

--- v0.1.2 [2014-03-31] ---

* [FIX] Fixed issue where a non-ascii process command-line would cause the process pages to crash.

* [FIX] Fixed issue where network interface info can be defaulted to a empty dict but a key was expected to exist for sorting.

* [FIX] Fixed issue where a network interface alias would cause psdash to crash

* [FIX] Improved the Vagrantfile when using a windows host.

--- v0.1.1 [2014-03-29] ---

* [FIX] Fixed error when specifying a unreadable log file. psdash will now check that
        each log file is readable on startup.

* [FIX] Fixed issue where fetching network interface addresses did not work on 32 bit arch.

* [NEW] Added a PSDASH_ prefix on all psdash specific configuration options.

* [FIX] Added argparse to setup.py requirements for Python 2.6 compatibility