@@ -22,10 +22,6 @@
                             <td class="label-col">CPU Cores</td>
                             <td>{{ cpus }}</td>
                         </tr>
-                        <tr>
-                            <td class="label-col">Memory</td>
-                            <td>{{ vmem.total|filesizeformat }}</td>
-                        </tr>
                     </table>
                 </div>
             </div>
