@@ -14,7 +14,7 @@
             <tbody>
                 {% for log in logs %}
                 <tr>
-                    <td><a href="/log?filename={{ log.filename }}">{{ log.filename }}</a></td>
+                    <td><a href="{{ url_for(".view_log", filename=log.filename) }}">{{ log.filename }}</a></td>
                     <td>{{ log.size|filesizeformat }}</td>
                     <td>{{ log.last_access }}</td>
                     <td>{{ log.last_modification }}</td>
