@@ -5,25 +5,31 @@
     </div>
     <ul class="process nav nav-pills">
         <li {% if section == "overview" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}">Overview</a>
+            <a href="{{ url_for(".process", pid=process.pid) }}">Overview</a>
         </li>
         <li {% if section == "threads" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}/threads">Threads <span class="badge">{{ process.get_num_threads() }}</span></a>
+            <a href="{{ url_for(".process", pid=process.pid, section="threads") }}">
+                Threads <span class="badge">{{ process.get_num_threads() }}</span>
+            </a>
         </li>
         <li {% if section == "files" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}/files">Open files <span class="badge">{{ process.get_open_files()|count }}</span></a>
+            <a href="{{ url_for(".process", pid=process.pid, section="files") }}">
+                Open files <span class="badge">{{ process.get_open_files()|count }}</span>
+            </a>
         </li>
         <li {% if section == "connections" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}/connections">Connections</a>
+            <a href="{{ url_for(".process", pid=process.pid, section="connections") }}">Connections</a>
         </li>
         <li {% if section == "memory" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}/memory">Memory maps</a>
+            <a href="{{ url_for(".process", pid=process.pid, section="memory") }}">Memory maps</a>
         </li>
         <li {% if section == "children" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}/children">Children <span class="badge">{{ process.get_children()|count }}</span></a>
+            <a href="{{ url_for(".process", pid=process.pid, section="children") }}">
+                Children <span class="badge">{{ process.get_children()|count }}</span>
+            </a>
         </li>
         <li {% if section == "limits" %}class="active"{% endif %}>
-            <a href="/process/{{ process.pid }}/limits">Limits</a>
+            <a href="{{ url_for(".process", pid=process.pid, section="limits") }}">Limits</a>
         </li>
     </ul>
     {% block process_content %}{% endblock %}
