@@ -7,7 +7,7 @@
     </tr>
     <tr>
         <td>Parent</td>
-        <td><a href="/process/{{ process.ppid }}">{{ process.parent.name }}</a> ({{ process.ppid }})</td>
+        <td><a href="{{ url_for(".process", pid=process.ppid) }}">{{ process.parent.name }}</a> ({{ process.ppid }})</td>
     </tr>
     <tr>
         <td>Command</td>
