@@ -8,43 +8,43 @@
     {% endif %}
     <div id="processes" class="panel panel-primary">
         <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Processes</div>
-        <table id="processes" class="table table-striped table-condensed table-hover">
+        <table id="processes" class="table table-condensed table-hover">
             <thead>
                 <tr>
                     <th>
-                        <a href="/processes/pid/{{ next_order }}">PID</a>
+                        <a href="{{ url_for(".processes", sort="pid", order=next_order) }}">PID</a>
                         {{ order_icon|safe if sort == "pid"}}
                     </th>
                     <th>
-                        <a href="/processes/name/{{ next_order }}">Name</a>
+                        <a href="{{ url_for(".processes", sort="name", order=next_order) }}">Name</a>
                         {{ order_icon|safe if sort == "name"}}
                     </th>
                     <th>
-                        <a href="/processes/username/{{ next_order }}">User</a>
+                        <a href="{{ url_for(".processes", sort="username", order=next_order) }}">User</a>
                         {{ order_icon|safe if sort == "username"}}
                     </th>
                     <th>
-                        <a href="/processes/status/{{ next_order }}">Status</a>
+                        <a href="{{ url_for(".processes", sort="status", order=next_order) }}">Status</a>
                         {{ order_icon|safe if sort == "status"}}
                     </th>
                     <th>
-                        <a href="/processes/created/{{ next_order }}">Created</a>
+                        <a href="{{ url_for(".processes", sort="created", order=next_order) }}">Created</a>
                         {{ order_icon|safe if sort == "created"}}
                     </th>
                     <th title="Resident Set Size">
-                        <a href="/processes/rss/{{ next_order }}">RSS</a>
+                        <a href="{{ url_for(".processes", sort="rss", order=next_order) }}">RSS</a>
                         {{ order_icon|safe if sort == "rss"}}
                     </th>
                     <th title="Virtual Memory Size">
-                        <a href="/processes/vms/{{ next_order }}">VMS</a>
+                        <a href="{{ url_for(".processes", sort="vms", order=next_order) }}">VMS</a>
                         {{ order_icon|safe if sort == "vms"}}
                     </th>
                     <th>
-                        <a href="/processes/memory/{{ next_order }}">Memory %</a>
+                        <a href="{{ url_for(".processes", sort="memory", order=next_order) }}">Memory %</a>
                         {{ order_icon|safe if sort == "memory"}}
                     </th>
                     <th>
-                        <a href="/processes/cpu/{{ next_order }}">CPU %</a> 
+                        <a href="{{ url_for(".processes", sort="cpu", order=next_order) }}">CPU %</a>
                         {{ order_icon|safe if sort == "cpu"}}
                     </th>
                 </tr>
@@ -53,7 +53,7 @@
                 {% for p in processes %}
                     <tr>
                       <td>{{ p.pid }}</td>
-                      <td title="{{ p.cmdline }}"><a href="/process/{{ p.pid }}">{{ p.name }}</td>
+                      <td title="{{ p.cmdline }}"><a href="{{ url_for(".process", pid=p.pid) }}">{{ p.name }}</a></td>
                       <td>{{ p.username }}</td>
                       <td>{{ p.status }}</td>
                       <td>{{ p.created }}</td>
